--- a/README
+++ b/README
@@ -9,9 +9,15 @@ Some notes on the shells
   Server Side Include based web shell, access via http://domain/path/.htaccess
 
 - htaccess.server-info
+  Server info binding for Apache
   This is not a genuine shell, but rather a self contained information disclosure attack
 
 - htaccess.server-status
+  Server status binding for Apache
+  This is not a genuine shell, but rather a self contained information disclosure attack
+
+- htaccess.caucho-stats
+  Server status binding for the mod_caucho Resin java server module
   This is not a genuine shell, but rather a self contained information disclosure attack
 
 Wireghoul - http://www.justanotherhacker.com
