--- a/README
+++ b/README
@@ -14,6 +14,9 @@ otherwise.
   Regular expression dos condition in mod_rewrite consumes a child process
 
 == INFO/      # Information disclosure attacks
+- modcheck/
+  Include additional response headers to indicate which Apache modules are active
+  
 - mod_caucho.info.htaccess *untested*
   Server status binding for the mod_caucho Resin java server module
 
