--- a/README
+++ b/README
@@ -6,7 +6,7 @@ named .htaccess, check the file to see if it needs editing before you upload it.
 Web shells executes commands from the query parameter c, unless the file states
 otherwise.
 
-== DOS/       # Denial of serive attacks
+== DOS/       # Denial of service attacks
 - apache.dos.htaccess
   Makes all requests return a 500 internal server error
 
